--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image to Negative</title>
+    <title>Detect Objects</title>
 </head>
 <body>
-    <h1>Upload an Image to Convert to Negative</h1>
+    <h1>Upload an Image to Deteckt Objects</h1>
     <form method="POST" enctype="multipart/form-data">
         <input type="file" name="file" accept="image/*">
-        <button type="submit">Upload and Convert</button>
+        <button type="submit">Upload and Detect</button>
     </form>
 
     {% if original_image and processed_image %}
@@ -17,7 +17,7 @@
         <img src="{{ url_for('static', filename='output/' + original_image) }}" alt="Original Image" width="300">
         
         <h2>Negative Image:</h2>
-        <img src="{{ url_for('static', filename='output/' + processed_image) }}" alt="Negative Image" width="300">
+        <img src="{{ url_for('static', filename='output/' + processed_image) }}" alt="Processed Image" width="300">
     {% endif %}
 </body>
 </html>
